Inclusao da tela escolha de cadastro

--- a/app-agenda/src/app/tipo-cadastro/tipo-cadastro.component.html
+++ b/app-agenda/src/app/tipo-cadastro/tipo-cadastro.component.html
@@ -1,23 +1,19 @@
+<div class="row body marginMenu">
+  <div class="col s12 m6">
 
-<nav>
-  <div class="nav-wrapper">
-    <a href="#">Gestão de Agenda</a>
+      <section class="content">
+
+        <div class="BemVindo inicio-BemVindo">
+           <h1>Bem vindo ao Agenda Digital!</h1>
+           <p>
+             Selecione a opção abaixo na qual deseja efetuar o cadastro.
+           </p>
+           <a class="btn btn-primary btn-lg tipocadClie" [routerLink]="['/cadclie']">Cliente</a>
+           <a class="btn btn-primary btn-lg" [routerLink]="['/#']">Empresa</a>
+          </div>
+
+      </section>
 
   </div>
-</nav>
-
-<div class="row">
-  <div class="input-field col s12 m6">
-
-    <div class="col col s12 m6">
-      <button class="waves-effect waves-light btn-small">Cliente
-        <i class="material-icons left">cloud</i>
-      </button>
-    </div>
-  <div class="col s6">
-    <button class="waves-effect waves-light btn-small">Empresa
-      <i class="material-icons left">cloud</i>
-    </button>
-  </div>
- </div>
 </div>
+
