--- a/app-agenda/src/styles.css
+++ b/app-agenda/src/styles.css
@@ -1,29 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
-/*html { background-color: #ffffff; } */
+.fundo{
+  background-color: #ecf0f5;
+}
 
+.fonteMenu{
+  font-weight: 100;
+  left: 50%;
+  font-size: 20px;
+  transform: translateX(-50%);
+}
 
-.jumbotron {
+.tipocadClie{
+  margin: 0 50px 0 0;
+}
+
+.marginMenu{
+  margin-top: 25px;
+}
+.box-header {
+  color: inherit;
+}
+
+/*Jumbotrons*/
+
+.BemVindo {
   background-color: #fff;
+  border-radius: 6px;
   text-align:center;
+  padding-top: 30px;
+  padding-bottom: 60px;
+  margin-bottom: 30px;
+  color: inherit;
 }
-.jumbotron h2 {
-  font-size: 40px;
-}
-
-.welcome-jumbotron h1 {
-  margin-bottom: 60px;
-}
-
-.welcome-jumbotron p {
-  margin-bottom: 60px;
-  font-size: 30px;
+.BemVindo h2 {
+  font-size: 36px;
 }
 
-.welcome-jumbotron h1 {
-  margin-bottom: 60px;
+.inicio-BemVindo h1 {
+  color: #555555;
+  margin-bottom: 38px;
+  font-size: 36px;
+  font-family: 'Source Sans Pro',sans-serif;
+  font-weight: 500;
+  padding-bottom: 15px;
 }
 
-.welcome-jumbotron p {
+.inicio-BemVindo p {
+  color: #555555;
+  margin: 30px 30px 0 37px;
   margin-bottom: 60px;
-  font-size: 30px;
+  font-size: 18px;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+  font: weight 200;
 }
