Ajustes no tratamento de Login e mensagens de erro e sucesso

--- a/app-agenda/src/app/menu/menu.component.html
+++ b/app-agenda/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav-wrapper">
     <a href="#!" class="fonteMenu">Agenda</a>
-    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="#!" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="#">Alterar Cadastro</a></li>
       <li><a href="#"></a>Procurar Empresa</li>
