--- a/app-agenda/src/app/login/login.component.css
+++ b/app-agenda/src/app/login/login.component.css
@@ -1,29 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
-/*html { background-color: #ffffff; } */
 
-
-.jumbotron {
+.login {
   background-color: #fff;
-  text-align:center;
-}
-.jumbotron h2 {
-  font-size: 40px;
-}
-
-.welcome-jumbotron h1 {
-  margin-bottom: 60px;
-}
-
-.welcome-jumbotron p {
-  margin-bottom: 60px;
-  font-size: 30px;
+    border-radius: 6px;
+    text-align: center;
+    padding-top: 23px;
+    padding-bottom: 15px;
+    margin-bottom: 8px;
+    color: #123938;
+    padding-right: 20px;
 }
 
-.welcome-jumbotron h1 {
-  margin-bottom: 60px;
+.input-field.col label{
+  left: 1.8rem;
 }
 
-.welcome-jumbotron p {
-  margin-bottom: 60px;
-  font-size: 30px;
+.row .col.offset-s3 {
+   margin-top: 47px;
+   right: 23px;
 }
