--- a/app-agenda/src/app/login/login.component.html
+++ b/app-agenda/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 
 <div id="login-page" class="row">
   <div class="col s12">
-    <form class="login-form">
+   <form [formGroup]="formulario" (ngSubmit)="onsubmit()"class="login-form">
       <div class="row">
         <div class="input-field col s12 center">
           <i class="large material-icons">event_note</i>
@@ -11,43 +11,55 @@
           <p class="center login-form-text">Agenda Virtual</p>
         </div>
       </div>
-
-      <div class="row margin">
-        <div class="input-field col s12">
+          <div class="login">
+           <div class="row margin ">
+        <div class="form-group" class="input-field col s12">
           <i class="large material-icons prefix">person_outline</i>
-          <input id="username" type="text">
+        <!--  <input (input)="usuario.nome=$event.target.value" id="username" type="text"> -->
+          <input type="text" formControlName="nome" id="nome" placeholder="">
+          <app-campo-control-erro [mostrarErro]="verificaValidTouched('nome')" msgErro="Nome deve ter 5 a 15 Digitos!">
+          </app-campo-control-erro>
           <label for="username" class="center-align">Nome</label>
+
         </div>
       </div>
       <div class="row margin">
-        <div class="input-field col s12">
+        <div class="form-group" class="input-field col s12">
           <i class="large material-icons prefix">lock_outline</i>
-          <input id="password" type="password">
-          <label for="password">Senha</label>
+         <!-- <input (input)="usuario.senha=$event.target.value" id="password" type="password">-->
+         <input type="text" formControlName="senha" id="senha" placeholder="">
+         <app-campo-control-erro [mostrarErro]="verificaValidTouched('senha')" msgErro="Nome inválido.">
+        </app-campo-control-erro>
+         <label for="password">Senha</label>
         </div>
       </div>
 
       <div class="row">
         <div class="input-field col s12 m12 l12">
           <label>
-            <input type="checkbox" class="filled-in" />
+            <input type="checkbox" />
             <span>Lembrar Senha</span>
           </label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s6 offset-s3">
-          <button class="waves-effect waves-light btn-small" type="submit" name="action" (click)="fazerLogin()">
+          <button class="waves-light btn-small"  type="submit" name="action">
             <i class="material-icons left">cloud</i>Entrar
           </button>
+          <app-campo-control-erro msgErro="Nome de Usuario ou Senha Inválidos">
+          </app-campo-control-erro>
+
         </div>
       </div>
-      <div class="row">
-        <div class="input-field col s6 m6 l6">
-          <p class="margin medium-small"><a href="tipoCadastro">Novo Cadastro!</a></p>
+      </div>
+           <div class="row">
+        <div class="input-field col s6 m6 l6 ">
+         <p class="margin right-align medium-small"><a href="tipoCadastro">Novo Contato!</a></p>
+                    <!-- <p class="margin right-align medium-small"><a href="tipoCadastro">Novo Cadastro!</a></p>-->
         </div>
         <div class="input-field col s6 m6 l6">
-          <p class="margin right-align medium-small"><a href="page-forgot-password.html">Esqueceu a Senha ?</a></p>
+          <p class="margin right-align medium-small"><a href="tipoCadastro()">Esqueceu a Senha ?</a></p>
         </div>
       </div>
 
