INCLUSAO DO PROJETO UPLOAD DE ARQUIVOS

--- a/app-agenda/src/app/cadastro-cliente/cadastro-cliente.component.html
+++ b/app-agenda/src/app/cadastro-cliente/cadastro-cliente.component.html
@@ -1,9 +1,6 @@
-<div class="container" style="margin: 3rem 0 0 0;">
+<div class="container" class="BemVindo inicio-BemVindo" style="margin: 3rem 0 0 0;">
   <form [formGroup]="formulario" (ngSubmit)="onsubmit()" class="form-horizontal">
       <div class="form-group" [ngClass]="aplicaCssErro('nome')">
-          <div class="col-sm-12">
-              <label for="nome" class="control-label">Nome</label>
-          </div>
           <div class="col-sm-12">
               <input type="text" class="form-control" formControlName="nome" id="nome" placeholder="Nome">
              <!-- <app-campo-control-erro [mostrarErro]="verificaValidTouched('nome')" msgErro="Nome é obrigatório.">
@@ -14,12 +11,8 @@
 
       <div class="form-group" [ngClass]="aplicaCssErro('email')">
           <div class="col-sm-12">
-
-              <label for="email" class="control-label">E-mail</label>
-          </div>
-          <div class="col-sm-12">
               <input type="email" class="form-control" formControlName="email" id="email"
-                 placeholder="nome@email.com">
+                 placeholder="nome@dominio.com.br">
             <!--  <app-campo-control-erro [mostrarErro]="verificaValidTouched('email')" msgErro="Email inválido.">
               </app-campo-control-erro>-->
           </div>
@@ -27,9 +20,12 @@
 
       <div formGroupName="endereco">
       <div class="form-group">
-          <div class="col-sm-3" [ngClass]="aplicaCssErro('endereco.cep')">
-              <label for="cep" class="control-label">Cep</label>
-              <input type="cep" class="form-control" formControlName="cep" id="cep" placeholder="00000-000" (blur)="consultaCep()">
+        <div class="input-field col s6">
+          <input id="last_name" type="text" class="validate">
+          <label for="last_name">Last Name</label>
+        </div>
+          <div class="col-sm-12" [ngClass]="aplicaCssErro('endereco.cep')">
+              <input type="cep" class="form-control" formControlName="cep" id="cep" placeholder="informe o Cep" (blur)="consultaCep()">
             <!-- <app-campo-control-erro [mostrarErro]="verificaValidTouched('endereco.cep')" msgErro="cep inválido.">
               </app-campo-control-erro>-->
           </div>
